<?xml version="1.0"?>
<package>
  <name>visualization</name>
  <version>0.0.0</version>
  <description>visualization</description>

  <maintainer email="jsumit@umich.edu">Sumit Joshi</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>mavs_msgs</build_depend>
  <build_depend>nloptcontrol_planner</build_depend>


  <run_depend>catkin</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>>
  <run_depend>numpy</run_depend>
  <run_depend>mavs_msgs</run_depend>
  <run_depend>nloptcontrol_planner</run_depend>


</package>
